openshift/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - name: 9092-tcp
      protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
